temporary fix for odd header image on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4010,7 +4010,7 @@ input, select, textarea {
 
 				#header .image {
 					font-size: 0.6em;
-					max-width: 60vw;
+					/* max-width: 60vw; */
 				}
 
 		}
